--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,14 @@
   <packaging>pom</packaging>
   <name>Archetype - microservices</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <spring-cloud.version>2023.0.1</spring-cloud.version>
+  </properties>
   <modules>
     <module>product-service</module>
     <module>order-service</module>
     <module>inventory-service</module>
+      <module>discovery-server</module>
   </modules>
   <dependencyManagement>
     <dependencies>
@@ -24,6 +28,13 @@
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
         <version>1.19.7</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
