--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8081
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
