--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=product-service
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+server.port=0
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
